src/css/custom.css
/* ... */
.navbar-sidebar--show {
  backdrop-filter: none;
  filter: none;
}

.navbar-sidebar__back {
  color: white;
}

/* The word "Farsight" */
.navbar__title {
  font-weight: 700;
  font-size: 24px;
  letter-spacing: -1px;
}

/* The navigation links in the page header */
.navbar__link {
  text-transform: uppercase;
  font-weight: 700;
}

.navbar__link:hover {
  color: var(--link-color-hover);
  border-radius: 8px;
  background: var(--neutral-800);
  box-shadow: 0 0 2px rgb(0 0 0 / 0.1), 0 0 10px rgb(0 0 0 / 0.05);
}

.theme-doc-sidebar-menu hr {
  margin: 0;
  padding: 0;
  border: 1px solid var(--neutral-800);
  width: 90%;
  margin-left: 1em;
  margin-top: 4px;
  margin-bottom: 4px;
}

[data-theme="dark"] .navbar {
  background: rgba(255, 255, 255, 0.05);
  border-color: rgba(0, 0, 0, 0.48);
  border-top-color: rgba(0, 0, 0, 0.9);
}

/** The site logo */
[data-theme="dark"] .navbar img {
  filter: invert(1);
}

[data-theme="dark"] .navbar__link:hover,
[data-theme="dark"] .navbar__link--active {
  --ifm-navbar-link-hover-color: var(--link-color);
}

.table-of-contents {
  font-size: 0.75rem;
}

.menu {
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 1.1;
  font-family: var(--ui-font-family);
}

.menu__list-item:not(:first-child) {
  margin-top: 0;
}

.menu__list-item-collapsible > a {
  color: var(--primary-color);
}
.menu__list-item-collapsible > :hover {
  color: var(--primary-color);
}

/** The nav menu when displayed as a pull-down menu */
@media (max-width: 996px) {
  .col {
    --ifm-menu-color-background-active: var(--neutral-800);
  }
}

.breadcrumbs__link {
  --ifm-breadcrumb-color-active: var(--link-color);
  --ifm-breadcrumb-item-background-active: var(--neutral-800);
}


.pagination-nav__link {
  border-radius: 8px;
  backdrop-filter: var(--glass-backdrop-filter);
  transition: all 0.15s ease-in-out;
}

.pagination-nav__sublabel {
  display: none;
}

.pagination-nav__link:hover {
  scale: 1.03;
  box-shadow: 0 5px 10px rgba(0,0,0,0.04);
  transition: all 0.15s ease-in-out;
}


/* The footer that includes version number and last modified date */
.theme-doc-footer p {
  margin: 0 0 4px 0;
}



body .DocSearch-Button-Keys, 
body .DocSearch-Button-Placeholder {
  display: none;
}

body .DocSearch-Button {
  background: transparent
}

/** Adding `body` to the selector to make it more specific */
body .DocSearch-Button:active, 
body .DocSearch-Button:focus, 
body .DocSearch-Button:hover {
  /* background: var(--primary-color); */
  background: transparent;
  /* color: var(--ifm-color-primary-contrast-background); */
  border-color: transparent;

  color: var(--link-color-hover);
  background: var(--neutral-800);
  box-shadow: 0 0 2px rgb(0 0 0 / 0.1), 0 0 10px rgb(0 0 0 / 0.05);

}

body .DocSearch-Modal {
  margin-top: 100px;
  padding-top: 8px;
  border-radius: 16px;
}

body .DocSearch-Form {
  --docsearch-searchbox-shadow: inset 0 0 0 2px #ccc;
  border-radius: 12px;
  margin-inline: 4px;
  font-weight: 600;
}


/** The footer at the bottom of the model search dialog */
body .DocSearch-Footer {
  display: none;
}

.footer--dark {
  background: linear-gradient(180deg, #000 0%, #334 100%);
  border-top: 1px solid var(--neutral-600);
}

.footer--dark a, .footer--dark a:visited, .footer--dark a:hover, .footer--dark a:active {
  border-radius: 8px;
  padding: 8px;
  padding-inline: 16px;
  color: #fff;
  text-decoration: none;
}

.footer__title {
  margin: 0;
  margin-bottom: 8px;
  margin-left: 16px;
}

.footer__link-item {
  line-height: 1.2;
}

.footer--dark a:hover, .footer--dark a:active {
  background: #445;
  /* backdrop-filter: var(--glass-backdrop-filter); */
}


/* Used for the icons in the footer */
.icon-one-rem {
  width: 1.25rem;
  height: 1rem;
  padding-right: .25rem;
}

/* The date displayed after the version number in the TOC of the Changelogs */
.docs-doc-id-compute-engine\/changelog .table-of-contents__link em,
.docs-doc-id-mathfield\/changelog .table-of-contents__link em  {
  padding-left: 1em;
  font-size: .75em;
  font-style: normal;
  opacity: 0.5;
}

/* The current (3.8) version of Docusaurus only support heading specified in Markdown. 
We wrap the markdown headings in a <nav> element, so that we can hide it. We have to "hide" it with visibility (otherwise it gets skipped), but we
then set the actual heading to be with a margin/padding/fontsize of 0 */
nav.hidden {
  visibility: hidden;
  display: block !important;
}

nav.hidden h1, nav.hidden h2, nav.hidden h3 {
  margin: 0;
  padding: 0;
  font-size: 0;
  line-height: 0;
}

